--- a/portfolio.html
+++ b/portfolio.html
@@ -23,36 +23,38 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="header-page">
-      <div class="container main-nav">
+    <header class="header">
+      <div class="container header__container">
         <a class="logo" href="./index.html"
-          >Web<span class="logo-black">Studio</span></a
+          >Web<span class="logo__text--black">Studio</span></a
         >
         <nav class="nav">
-          <ul class="site-nav">
-            <li class="item">
-              <a class="site-nav-link" href="./index.html">Студия</a>
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="./index.html">Студия</a>
             </li>
-            <li class="item">
-              <a class="site-nav-link current" href="./portfolio.html"
+            <li class="nav__item">
+              <a class="nav__link nav__link--current" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
-            <li class="item"><a class="site-nav-link" href="">Контакты</a></li>
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакты</a>
+            </li>
           </ul>
         </nav>
-        <ul class="header-contacts">
-          <li class="header-contacts-item">
-            <a class="header-contacts-link" href="maito:info@devstudio.com"
-              ><svg class="icon-mail" width="16" height="12">
+        <ul class="contact__list">
+          <li class="contact__item">
+            <a class="contact__link" href="maito:info@devstudio.com"
+              ><svg class="icon__mail" width="16" height="12">
                 <use href="./image/icon.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header-contacts-item">
-            <a class="header-contacts-link" href="tel:+380961111111">
-              <svg class="icon-smartphone" width="10" height="16">
+          <li class="contact__item">
+            <a class="contact__link" href="tel:+380961111111">
+              <svg class="icon__smartphone" width="10" height="16">
                 <use href="./image/icon.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -116,18 +118,19 @@
               <a class="services-link" href="">
                 <div class="services-overlay">
                   <img
-                  src="./image/portfolio/Poster.jpg"
-                  alt="Постер"
-                  width="370"/>
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                    src="./image/portfolio/Poster.jpg"
+                    alt="Постер"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h3 class="title-portfolio">
                     Постер New Orlean vs Golden Star
@@ -141,163 +144,163 @@
               <a class="services-link" href="">
                 <div class="services-overlay">
                   <img
-                  src="./image/portfolio/seafood.jpg"
-                  alt="Ресторан"
-                  width="370"/>
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                    src="./image/portfolio/seafood.jpg"
+                    alt="Ресторан"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Ресторан Seafood</h2>
                   <p class="portfolio-services">Приложение</p>
-                </div>                
+                </div>
               </a>
             </li>
             <!-- 4 -->
             <li class="services-item">
               <a class="services-link" href="">
                 <div class="services-overlay">
-                <img
-                  src="./image/portfolio/prime.jpg"
-                  alt="Наушники"
-                  width="370"
-                />
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                  <img
+                    src="./image/portfolio/prime.jpg"
+                    alt="Наушники"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Проект Prime</h2>
                   <p class="portfolio-services">Маркетинг</p>
-                </div>                
+                </div>
               </a>
             </li>
             <!-- 5 -->
             <li class="services-item">
               <a class="services-link" href="">
                 <div class="services-overlay">
-                <img
-                  src="./image/portfolio/boxes.jpg"
-                  alt="Коробка"
-                  width="370"
-                />
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                  <img
+                    src="./image/portfolio/boxes.jpg"
+                    alt="Коробка"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Проект Boxes</h2>
                   <p class="portfolio-services">Приложение</p>
                 </div>
-                
               </a>
             </li>
             <!-- 6 -->
             <li class="services-item">
               <a class="services-link" href="">
                 <div class="services-overlay">
-                <img
-                  src="./image/portfolio/inspiration.jpg"
-                  alt="Компютер"
-                  width="370"
-                />
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                  <img
+                    src="./image/portfolio/inspiration.jpg"
+                    alt="Компютер"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Inspiration has no Borders</h2>
                   <p class="portfolio-services">Веб-сайт</p>
                 </div>
-                
               </a>
             </li>
             <!-- 7 -->
             <li class="services-item">
               <a class="services-link" href="">
                 <div class="services-overlay">
-                <img
-                  src="./image/portfolio/limited-edition.jpg"
-                  alt="Книга"
-                  width="370"
-                />
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                  <img
+                    src="./image/portfolio/limited-edition.jpg"
+                    alt="Книга"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Издание Limited Edition</h2>
                   <p class="portfolio-services">Дизайн</p>
-                </div>                
+                </div>
               </a>
             </li>
             <!-- 8 -->
             <li class="services-item">
               <a class="services-link" href="">
                 <div class="services-overlay">
-                <img src="./image/portfolio/Lab.jpg" alt="Lab" width="370" />
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
+                  <img src="./image/portfolio/Lab.jpg" alt="Lab" width="370" />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
                 </div>
-              </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Проект LAB</h2>
                   <p class="portfolio-services">Маркетинг</p>
-                </div>            
+                </div>
               </a>
             </li>
             <!-- 9 -->
             <li class="services-item">
               <a class="services-link" href="">
                 <div class="services-overlay">
-                <img
-                  src="./image/portfolio/growing-business.jpg"
-                  alt="ноутбук"
-                  width="370"
-                />
-                <div class="overlay-text">
-                  <p class="overlay-p">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера
-                    конкурентов.
-                  </p>
-                </div></div>
+                  <img
+                    src="./image/portfolio/growing-business.jpg"
+                    alt="ноутбук"
+                    width="370"
+                  />
+                  <div class="overlay-text">
+                    <p class="overlay-p">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <div class="services-content">
                   <h2 class="title-portfolio">Growing Business</h2>
                   <p class="portfolio-services">Приложение</p>
-                </div>                
+                </div>
               </a>
             </li>
           </ul>
@@ -361,18 +364,24 @@
               </a>
             </li>
           </ul>
-          </div>
-          <form class="footer-subscription">
-            <strong class="strong">ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong>
-            <div class="subscription">
-              <input class="subscription-input" type="email" name="email" placeholder="E-mail" />
-              <button type="submit" class="order-btn subscription-btn"><span class="subscription-btn-text">Подписаться</span>
-              <svg class="subscription-icon" width="24" height="24">
-              <use href="./image/icon.svg#icon-send"></use>
-            </svg>
-          </button>
         </div>
-      </form>       
+        <form class="footer-subscription">
+          <strong class="strong">ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong>
+          <div class="subscription">
+            <input
+              class="subscription-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="order-btn subscription-btn">
+              <span class="subscription-btn-text">Подписаться</span>
+              <svg class="subscription-icon" width="24" height="24">
+                <use href="./image/icon.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
