--- a/portfolio.html
+++ b/portfolio.html
@@ -70,36 +70,36 @@
         <div class="container">
           <!-- Список Кнопок -->
           <h1 class="visually-hidden">Портфоліо</h1>
-          <ul class="navigation">
-            <li class="navigation-space">
-              <button class="navigation-btn" type="button">Все</button>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <button class="menu__btn" type="button">Все</button>
             </li>
-            <li class="navigation-space">
-              <button class="navigation-btn" type="button">Веб-сайты</button>
+            <li class="menu__item">
+              <button class="menu__btn" type="button">Веб-сайты</button>
             </li>
-            <li class="navigation-space">
-              <button class="navigation-btn" type="button">Приложения</button>
+            <li class="menu__item">
+              <button class="menu__btn" type="button">Приложения</button>
             </li>
-            <li class="navigation-space">
-              <button class="navigation-btn" type="button">Дизайн</button>
+            <li class="menu__item">
+              <button class="menu__btn" type="button">Дизайн</button>
             </li>
-            <li class="navigation-space">
-              <button class="navigation-btn" type="button">Маркетинг</button>
+            <li class="menu__item">
+              <button class="menu__btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <!-- Карточки -->
-          <ul class="services">
+          <ul class="services__list">
             <!-- 1 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/techno.jpg"
                     alt="Технокряк"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -107,23 +107,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Технокряк</h2>
-                  <p class="portfolio-services">Веб-сайт</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Технокряк</h2>
+                  <p class="services__type">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <!-- 2 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/Poster.jpg"
                     alt="Постер"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -131,25 +131,25 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h3 class="title-portfolio">
+                <div class="services__item-description">
+                  <h3 class="services__title">
                     Постер New Orlean vs Golden Star
                   </h3>
-                  <p class="portfolio-services">Дизайн</p>
+                  <p class="services__type">Дизайн</p>
                 </div>
               </a>
             </li>
             <!-- 3 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/seafood.jpg"
                     alt="Ресторан"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -157,23 +157,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Ресторан Seafood</h2>
-                  <p class="portfolio-services">Приложение</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Ресторан Seafood</h2>
+                  <p class="services__type">Приложение</p>
                 </div>
               </a>
             </li>
             <!-- 4 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/prime.jpg"
                     alt="Наушники"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -181,23 +181,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Проект Prime</h2>
-                  <p class="portfolio-services">Маркетинг</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Проект Prime</h2>
+                  <p class="services__type">Маркетинг</p>
                 </div>
               </a>
             </li>
             <!-- 5 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/boxes.jpg"
                     alt="Коробка"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -205,23 +205,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Проект Boxes</h2>
-                  <p class="portfolio-services">Приложение</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Проект Boxes</h2>
+                  <p class="services__type">Приложение</p>
                 </div>
               </a>
             </li>
             <!-- 6 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/inspiration.jpg"
                     alt="Компютер"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -229,23 +229,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Inspiration has no Borders</h2>
-                  <p class="portfolio-services">Веб-сайт</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Inspiration has no Borders</h2>
+                  <p class="services__type">Веб-сайт</p>
                 </div>
               </a>
             </li>
             <!-- 7 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/limited-edition.jpg"
                     alt="Книга"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -253,19 +253,19 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Издание Limited Edition</h2>
-                  <p class="portfolio-services">Дизайн</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Издание Limited Edition</h2>
+                  <p class="services__type">Дизайн</p>
                 </div>
               </a>
             </li>
             <!-- 8 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img src="./image/portfolio/Lab.jpg" alt="Lab" width="370" />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -273,23 +273,23 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Проект LAB</h2>
-                  <p class="portfolio-services">Маркетинг</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Проект LAB</h2>
+                  <p class="services__type">Маркетинг</p>
                 </div>
               </a>
             </li>
             <!-- 9 -->
-            <li class="services-item">
-              <a class="services-link" href="">
-                <div class="services-overlay">
+            <li class="services__item">
+              <a class="services__link" href="">
+                <div class="services__thumb">
                   <img
                     src="./image/portfolio/growing-business.jpg"
                     alt="ноутбук"
                     width="370"
                   />
-                  <div class="overlay-text">
-                    <p class="overlay-p">
+                  <div class="services__overlay">
+                    <p class="services__overlay--text">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
                       цифрового шпионажа и атак на защищённые сервера
@@ -297,9 +297,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services-content">
-                  <h2 class="title-portfolio">Growing Business</h2>
-                  <p class="portfolio-services">Приложение</p>
+                <div class="services__item-description">
+                  <h2 class="services__title">Growing Business</h2>
+                  <p class="services__type">Приложение</p>
                 </div>
               </a>
             </li>
@@ -309,55 +309,59 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <div class="container footer-block">
-        <div class="footer-address">
+      <div class="container footer__container">
+        <!-- Адреса -->
+        <div class="footer__address">
           <a class="logo" href="./index.html"
-            >Web<span class="logo-white">Studio</span></a
+            >Web<span class="logo__text--white">Studio</span></a
           >
           <address class="address">
-            <ul class="address-list">
-              <li class="address-item">
-                <a class="address-a" href="">г. Киев, пр-т Леси Украинки, 26</a>
+            <ul class="address__list">
+              <li class="address__item">
+                <a class="address__link" href=""
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
               </li>
-              <li class="address-item">
-                <a class="contacts-a" href="maito:info@devstudio.com"
+              <li class="address__item">
+                <a class="contacts__link" href="maito:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="address-item">
-                <a class="contacts-a" href="tel:+380961111111"
+              <li class="address__item">
+                <a class="contacts__link" href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="footer-social">
+        <!-- Футер соц сети -->
+        <div class="footer__social">
           <strong class="strong">ПРИСОЕДИНЯЙТЕСЬ</strong>
-          <ul class="footer-list">
-            <li class="footer-item">
-              <a class="footer-soc-link" href="">
+          <ul class="footer__social-list">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="">
                 <svg width="20" height="20">
                   <use href="./image/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-soc-link" href="">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="">
                 <svg width="20" height="20">
                   <use href="./image/icon.svg#icon-twiter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-soc-link" href="">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="">
                 <svg width="20" height="20">
                   <use href="./image/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-item">
-              <a class="footer-soc-link" href="">
+            <li class="footer__social-item">
+              <a class="footer__social-link" href="">
                 <svg width="20" height="20">
                   <use href="./image/icon.svg#icon-linkedin"></use>
                 </svg>
@@ -365,18 +369,19 @@
             </li>
           </ul>
         </div>
-        <form class="footer-subscription">
+        <!-- Рoзсилка -->
+        <form class="footer__subscription">
           <strong class="strong">ПОДПИШИТЕСЬ НА РАССЫЛКУ</strong>
           <div class="subscription">
             <input
-              class="subscription-input"
+              class="subscription__input"
               type="email"
               name="email"
               placeholder="E-mail"
             />
-            <button type="submit" class="order-btn subscription-btn">
-              <span class="subscription-btn-text">Подписаться</span>
-              <svg class="subscription-icon" width="24" height="24">
+            <button type="submit" class="subscription__btn">
+              Подписаться
+              <svg class="subscription__icon" width="24" height="24">
                 <use href="./image/icon.svg#icon-send"></use>
               </svg>
             </button>
