--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!--Шапка-->
@@ -177,7 +178,7 @@
               />
               <div class="team__container">
                 <h3 class="team__title">Игорь Демьяненко</h3>
-                <p class="team__profession">Product Designer</p>
+                <p>Product Designer</p>
                 <ul class="soc__list">
                   <li class="soc__item">
                     <a class="soc__link" href="">
@@ -219,7 +220,7 @@
               />
               <div class="team__container">
                 <h3 class="team__title">Ольга Репина</h3>
-                <p class="team__profession">Frontend Developer</p>
+                <p>Frontend Developer</p>
                 <ul class="soc__list">
                   <li class="soc__item">
                     <a class="soc__link" href="">
@@ -261,7 +262,7 @@
               />
               <div class="team__container">
                 <h3 class="team__title">Николай Тарасов</h3>
-                <p class="team__profession">Marketing</p>
+                <p>Marketing</p>
                 <ul class="soc__list">
                   <li class="soc__item">
                     <a class="soc__link" href="">
@@ -303,7 +304,7 @@
               />
               <div class="team__container">
                 <h3 class="team__title">Михаил Ермаков</h3>
-                <p class="team__profession">UI Designer</p>
+                <p>UI Designer</p>
                 <ul class="soc__list">
                   <li class="soc__item">
                     <a class="soc__link" href="">
@@ -530,9 +531,7 @@
             Соглашаюсь срассылкой и принимаю
             <a href="" class="checkbox__link"> Условия договора</a>
           </label>
-          <button type="submit" class="btn Form-btn-submit">
-            Отправить
-          </button>
+          <button type="submit" class="btn Form-btn-submit">Отправить</button>
         </form>
       </div>
     </div>
