--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           </ul>
         </nav>
         <!-- /* ------Header contacts */ -->
-        <ul class="contact__list">
+        <ul class="contact">
           <li class="contact__item">
             <a class="contact__link" href="maito:info@devstudio.com"
-              ><svg class="icon__mail" width="16" height="12">
+              ><svg class="contack__icon" width="16" height="12">
                 <use href="./image/icon.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
@@ -52,7 +52,7 @@
           </li>
           <li class="contact__item">
             <a class="contact__link" href="tel:+380961111111">
-              <svg class="icon__smartphone" width="10" height="16">
+              <svg class="contack__icon" width="10" height="16">
                 <use href="./image/icon.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -78,7 +78,7 @@
           <h2 class="visually-hidden">наше преимущество</h2>
           <ul class="features">
             <li class="features__item">
-              <div class="features__icon">
+              <div class="features__box">
                 <svg width="70" height="70">
                   <use href="./image/icon.svg#icon-features1"></use>
                 </svg>
@@ -90,7 +90,7 @@
               </p>
             </li>
             <li class="features__item">
-              <div class="features__icon">
+              <div class="features__box">
                 <svg width="70" height="70">
                   <use href="./image/icon.svg#icon-features2"></use>
                 </svg>
@@ -102,7 +102,7 @@
               </p>
             </li>
             <li class="features__item">
-              <div class="features__icon">
+              <div class="features__box">
                 <svg width="70" height="70">
                   <use href="./image/icon.svg#icon-features3"></use>
                 </svg>
@@ -114,7 +114,7 @@
               </p>
             </li>
             <li class="features__item">
-              <div class="features__icon">
+              <div class="features__box">
                 <svg width="70" height="70">
                   <use href="./image/icon.svg#icon-features4"></use>
                 </svg>
@@ -129,10 +129,10 @@
         </div>
       </section>
       <!--Чем мы занимаемся-->
-      <section class="section work__section">
+      <section class="section section--no-paddin-top">
         <div class="container">
           <h2 class="section__title">Чем мы занимаемся</h2>
-          <ul class="work__list">
+          <ul class="work">
             <li class="work__item">
               <img
                 src="./image/box1.jpg"
@@ -164,10 +164,10 @@
         </div>
       </section>
       <!--Наша команда-->
-      <section class="section section__team">
+      <section class="section section--other-background">
         <div class="container">
           <h2 class="section__title">Наша команда</h2>
-          <ul class="team__list">
+          <ul class="team">
             <li class="team__item">
               <img
                 src="./image/igor.jpg"
@@ -178,31 +178,31 @@
               <div class="team__container">
                 <h3 class="team__title">Игорь Демьяненко</h3>
                 <p>Product Designer</p>
-                <ul class="soc__list">
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -220,31 +220,31 @@
               <div class="team__container">
                 <h3 class="team__title">Ольга Репина</h3>
                 <p>Frontend Developer</p>
-                <ul class="soc__list">
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -262,31 +262,31 @@
               <div class="team__container">
                 <h3 class="team__title">Николай Тарасов</h3>
                 <p>Marketing</p>
-                <ul class="soc__list">
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -304,31 +304,31 @@
               <div class="team__container">
                 <h3 class="team__title">Михаил Ермаков</h3>
                 <p>UI Designer</p>
-                <ul class="soc__list">
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                <ul class="social">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-twiter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="soc__item">
-                    <a class="soc__link" href="">
-                      <svg class="icon" width="20" height="20">
+                  <li class="social__item">
+                    <a class="social__link" href="">
+                      <svg width="20" height="20">
                         <use href="./image/icon.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -343,7 +343,7 @@
       <section class="section">
         <div class="container">
           <h2 class="section__title">Постоянные клиенты</h2>
-          <ul class="client__list">
+          <ul class="client">
             <li class="client__item">
               <a class="client__link" href=""
                 ><svg width="106" height="60">
