--- a/portfolio.html
+++ b/portfolio.html
@@ -43,10 +43,10 @@
             </li>
           </ul>
         </nav>
-        <ul class="contact__list">
+        <ul class="contact">
           <li class="contact__item">
             <a class="contact__link" href="maito:info@devstudio.com"
-              ><svg class="icon__mail" width="16" height="12">
+              ><svg class="contack__icon" width="16" height="12">
                 <use href="./image/icon.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
@@ -54,7 +54,7 @@
           </li>
           <li class="contact__item">
             <a class="contact__link" href="tel:+380961111111">
-              <svg class="icon__smartphone" width="10" height="16">
+              <svg class="contack__icon" width="10" height="16">
                 <use href="./image/icon.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -70,7 +70,7 @@
         <div class="container">
           <!-- Список Кнопок -->
           <h1 class="visually-hidden">Портфоліо</h1>
-          <ul class="menu__list">
+          <ul class="menu">
             <li class="menu__item">
               <button class="menu__btn" type="button">Все</button>
             </li>
@@ -88,7 +88,7 @@
             </li>
           </ul>
           <!-- Карточки -->
-          <ul class="services__list">
+          <ul class="services">
             <!-- 1 -->
             <li class="services__item">
               <a class="services__link" href="">
@@ -107,9 +107,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Технокряк</h2>
-                  <p class="services__type">Веб-сайт</p>
+                  <p class="services__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -131,11 +131,11 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h3 class="services__title">
                     Постер New Orlean vs Golden Star
                   </h3>
-                  <p class="services__type">Дизайн</p>
+                  <p class="services__text">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -157,9 +157,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Ресторан Seafood</h2>
-                  <p class="services__type">Приложение</p>
+                  <p class="services__text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -181,9 +181,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Проект Prime</h2>
-                  <p class="services__type">Маркетинг</p>
+                  <p class="services__text">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -205,9 +205,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Проект Boxes</h2>
-                  <p class="services__type">Приложение</p>
+                  <p class="services__text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -229,9 +229,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Inspiration has no Borders</h2>
-                  <p class="services__type">Веб-сайт</p>
+                  <p class="services__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
@@ -253,9 +253,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Издание Limited Edition</h2>
-                  <p class="services__type">Дизайн</p>
+                  <p class="services__text">Дизайн</p>
                 </div>
               </a>
             </li>
@@ -273,9 +273,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Проект LAB</h2>
-                  <p class="services__type">Маркетинг</p>
+                  <p class="services__text">Маркетинг</p>
                 </div>
               </a>
             </li>
@@ -297,9 +297,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="services__item-description">
+                <div class="services__box">
                   <h2 class="services__title">Growing Business</h2>
-                  <p class="services__type">Приложение</p>
+                  <p class="services__text">Приложение</p>
                 </div>
               </a>
             </li>
